--- a/index.html
+++ b/index.html
@@ -5,11 +5,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>titlesample</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
 </head>
 
 <body>
-    <p>textsample</p>
+
+    <div id="page-wrap">
+
+        <img src="/IMG_20210623_122411_012.jpg" alt="Photo" id="pic" />
+
+        <div id="contact-info" class="vcard">
+            <h1>Konstantin Glushenkov</h1>
+
+            <p>
+                <strong>Birth:</strong> 1993.11.12<br>
+                <strong>Address:</strong> Minsk, Belarus<br>
+                <br>
+                <strong>Cell:</strong> <a class="tel" href="tel:+375293871668">+375293871668</a><br />
+                <strong>Email:</strong> <a class="email"
+                    href="mailto:kostyalibertine@gmail.com">kostyalibertine@gmail.com</a><br>
+                <strong>Telegram:</strong> <a href="https://t.me/KostyaLibertine">@KostyaLibertine</a><br>
+                <strong>Discord:</strong> KostyaLibertine#1042
+
+            </p>
+        </div>
+
+        <div id="objective">
+            <p>
+                Rolling Scopes School student, want to become a JavaScript junior<br>developer for working remotely.
+                Able to successfully prioritize<br>a big pile of things, have a built-in burnout protection and<br>good
+                opportunistic skills.
+            </p>
+        </div>
+
+        <div class="clear"></div>
+
+        <dl>
+            <dd class="clear"></dd>
+
+            <dt>Education</dt>
+            <dd>
+                <h2>BSUIR (incomplete)</h2>
+                <p><strong>Major:</strong> Faculty of Computer Systems and Networks<br />
+                    <strong>Minor:</strong> Software for Information Technologies
+                </p>
+                <h2>QA Academy</h2>
+                <p>QA basics</p>
+            </dd>
+
+            <dd class="clear"></dd>
+
+            <dt>Code example</dt>
+            <dd>
+                <h2>Endless hire</h2>
+                <code>let hire = 0; <br>
+                    while (hire < 1) { <br>
+                    &nbsp alert('Hire Me!'); <br>
+                    }</code>
+            </dd>
+
+            <dd class="clear"></dd>
+
+            <dt>Projects</dt>
+            <dd>
+                <h2>Rolling Scopes School <span> JavaScript/Front-End 2022Q1</span></h2>
+                <ul>
+                    <li><a href="https://kostyalibertine.github.io/virtual-keyboard/">Virtual keyboard</a></li>
+                    <li><a href="https://kostyalibertine.github.io/cssMemSlider/cssMemSlider/index.html">CSS mem
+                            slider</a></li>
+                    <li><a
+                            href="https://rolling-scopes-school.github.io/kostyalibertine-JSFE2022Q1/shelter/pages/main/">Shelter</a>
+                    </li>
+                </ul>
+            </dd>
+
+            <dd class="clear"></dd>
+
+            <dt>Language proficiency</dt>
+            <dd>
+                <ul>
+                    <li><strong>English:</strong> A2</li>
+                    <li><strong>Russian:</strong> C2</li>
+                    <li><strong>Belorussian:</strong> C1</li>
+                </ul>
+            </dd>
+
+            <dd class="clear"></dd>
+
+            <dt>Hobbies</dt>
+            <dd>Travel Nordic countries, Snowboard, Swedish cars</dd>
+
+        </dl>
+
+        <div class="clear"></div>
+
+    </div>
 </body>
 
 </html>
