--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="page-wrap">
         <header>
-            <img src="/IMG_20210623_122411_012.jpg" alt="Photo" id="pic" />
+            <img src="IMG_20210623_122411_012.jpg" alt="Photo" id="pic" />
             <div>
                 <h1>Konstantin Glushenkov</h1>
                 <ul class="vcard">
