fix: minor issues

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
                 <ul class="vcard">
                     <li><strong>Birth:</strong> 1993.11.12</li>
                     <li><strong>Address:</strong> Minsk, Belarus</li>
-                    <br>
-                    <li><strong>Cell:</strong> <a name="contacts" class="tel" href="tel:+375293871668">+375293871668</a></li>
+                    <li><strong>Cell:</strong> <a class="tel" href="tel:+375293871668">+375293871668</a></li>
                     <li><strong>Email:</strong> <a class="email"
                         href="mailto:kostyalibertine@gmail.com">kostyalibertine@gmail.com</a></li>
                         <li><strong>Telegram:</strong> <a href="https://t.me/KostyaLibertine">@KostyaLibertine</a></li>
@@ -39,7 +38,7 @@
         <main>
             <div class="clear"></div>
             <dl>
-                <dd class="clear"></dd>
+                <!-- <dd class="clear"></dd> -->
                 <dt>Skills</dt>
                 <dd>
                     <ul class="ul-dot">
@@ -56,8 +55,8 @@
                 <dd>
                     <h2>Endless hire</h2>
                     <code>let hire = 0; <br>
-                    while (hire < 1) { <br>
-                    &nbsp alert('Hire Me!'); <br>
+                    while (hire &lt; 1) { <br>
+                    &nbsp; alert('Hire Me!'); <br>
                     }</code>
                 </dd>
                 <dd class="clear"></dd>
