fix: minor issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="page-wrap">
         <header>
-            <img src="IMG_20210623_122411_012.jpg" alt="Photo" id="pic" />
+            <img src="IMG_20210623_122411_012.jpg" alt="Photo" id="pic">
             <div>
                 <h1>Konstantin Glushenkov</h1>
                 <ul class="vcard">
@@ -76,7 +76,7 @@
                 <dt>Education</dt>
                 <dd>
                     <h2>BSUIR (incomplete)</h2>
-                    <p><strong>Major:</strong> Faculty of Computer Systems and Networks<br />
+                    <p><strong>Major:</strong> Faculty of Computer Systems and Networks<br>
                         <strong>Minor:</strong> Software for Information Technologies
                     </p>
                     <h2>QA Academy</h2>
